feat: 升级JDK到17版本并适配和优化代码